# clsocket

./: CMakeLists.txt  README  conf.ini
examples/: EchoServer.cpp  client.cpp  readConfigFile.cpp  readConfigFile.h  server.cpp
src/: SimpleSocket.cpp
